--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
 title: Arthur Gaudron
-description: 
+description: Research Engineer
 google_analytics: UA-135534253-1
 
