--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
 title: Arthur Gaudron
-description: Research Engineer
+description: Research Engineer at Center for Robotics, MINES ParisTech, PSL University
 google_analytics: UA-135534253-1
 
