--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ theme: jekyll-theme-cayman
 title: Arthur Gaudron
 description: Research Engineer at Center for Robotics, MINES ParisTech, PSL University
 google_analytics: UA-135534253-1
-
+plugins:
+  - jemoji
