--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
 title: Arthur Gaudron
-description: Associate Professor at Center for Robotics, MINES ParisTech, PSL University
+description: Associate Professor at the Center for Robotics, MINES ParisTech, PSL University
 plugins:
   - jemoji
