--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minima
+theme: minima
 title: Arthur Gaudron
 description: Associate Professor at the Center for Robotics, Mines Paris, PSL University
 plugins:
