--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Your awesome title
+title: Arthur Gaudron
 author:
-  name: GitHub User
-  email: your-email@domain.com
+  name: Arthur Gaudron
+  email: arthur@email.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
