--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Arthur Gaudron
 author:
-  name: Arthur Gaudron
-  email: arthur@email.com
+  name: 
+  email: 
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
@@ -14,6 +14,7 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jemoji
 
 # Theme-specific settings
 
