--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ minima:
 header_pages:
    - about.md
    - category.md
-   - cours.md
+   - /pages/cours.md
 
 # Set to `true` to show excerpts on the homepage.
 #
